--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "mongoose": "^8.0.1",
-    "next": "14.0.2",
+    "next": "^14.0.2",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
